--- a/DIETROUTINE/app/src/main/res/values/strings.xml
+++ b/DIETROUTINE/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">DIET-ROUTINE</string>
+    <string name="diet_routine">DIET ROUTINE</string>
+    <string name="take_account">Take an account on :\n - individual medical history\n - current health status\n - dietary preference\nGenerates:\n - tailored meal plan\n -recommended dietary\n</string>
+    <string name="start_assesment">START ASSESMENT</string>
+    <string name="todo">TODO</string>
+    <string name="informed_decision">MAKE AN INFORMED DECISION ABOUT YOUR DIET AND HEALTH.</string>
+    <string name="Get_recommendation">GET RECOMMENDATION</string>
+    <string name="personal_details">Personal details:</string>
+    <string name="health_status">Health status:</string>
+    <string name="dietary_prefe">Dietary preference:</string>
+    <string name="additional_info">Additional info:</string>
+
 </resources>
